--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-280.3KB/s(Youtube:不良林), server: 38.75.136.102, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇭🇰 香港-855.8KB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇳🇱 荷兰-915.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇳🇱 荷兰-513.8KB/s(Youtube:不良林), server: 213.183.59.211, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-820.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇺🇸 美国-296.7KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 波兰-419.5KB/s(Youtube:不良林), server: 217.30.10.65, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇺🇸 美国-753.9KB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-788.5KB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 38.75.136.102, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-280.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-915.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-280.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-915.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-280.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-915.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-280.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-915.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-280.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-915.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-280.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-915.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-280.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-855.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-915.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-820.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
+      - 波兰-419.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
