--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇺🇸 美国-296.7KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 波兰-419.5KB/s(Youtube:不良林), server: 217.30.10.65, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
   - {name: 🇺🇸 美国-753.9KB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-788.5KB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.52MB/s(Youtube:不良林), server: 38.75.136.102, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇷🇺 俄罗斯联邦-169.3KB/s(Youtube:不良林), server: 213.183.53.200, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇺🇸 美国-642.8KB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-712.0KB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-920.2KB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-253.8KB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-455.8KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇨🇳 中国-640.7KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
-      - 波兰-419.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-169.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-712.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-920.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
-      - 波兰-419.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-169.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-712.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-920.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
-      - 波兰-419.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-169.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-712.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-920.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
-      - 波兰-419.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-169.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-712.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-920.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
-      - 波兰-419.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-169.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-712.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-920.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
-      - 波兰-419.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-169.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-712.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-920.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-961.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-296.7KB/s(Youtube:不良林)
-      - 波兰-419.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-753.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-788.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-169.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-642.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-712.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-920.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-253.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
