--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-384.4KB/s(Youtube:不良林), server: 213.183.53.208, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇨🇳 中国-455.8KB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 38.75.136.102, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇳🇱 荷兰-585.9KB/s(Youtube:不良林), server: 37.120.192.158, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-640.7KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇷🇺 俄罗斯联邦-554.3KB/s(Youtube:不良林), server: 213.183.53.214, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
   - {name: 🇦🇺 澳大利亚-352.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇦🇺 澳大利亚-943.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇨🇳 中国-384.2KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇭🇰 香港-3.77MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-962.8KB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-694.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-339.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇸🇬 新加坡-1.79MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.02MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-384.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-585.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-352.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-943.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-339.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-384.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-585.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-352.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-943.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-339.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-384.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-585.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-352.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-943.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-339.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-384.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-585.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-352.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-943.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-339.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-384.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-585.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-352.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-943.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-339.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-384.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-585.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-352.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-943.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-339.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-384.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-455.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-585.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-640.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-554.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-352.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-943.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-962.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-339.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
