--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-636.2KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇯🇵 日本-3.02MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-419.9KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇫🇷 法国-854.8KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 未知国家-1.32MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇳 中国-839.5KB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-890.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-927.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-385.2KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇦🇺 澳大利亚-939.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 51.161.118.38, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-761.9KB/s(Youtube:不良林), server: 51.161.118.38, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林) 2, server: 51.161.118.38, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-528.8KB/s(Youtube:不良林), server: 51.161.118.38, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.25MB/s(Youtube:不良林), server: 51.161.118.38, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-854.8KB/s(Youtube:不良林)
-      - 未知国家-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-761.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-528.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-854.8KB/s(Youtube:不良林)
-      - 未知国家-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-761.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-528.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-854.8KB/s(Youtube:不良林)
-      - 未知国家-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-761.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-528.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-854.8KB/s(Youtube:不良林)
-      - 未知国家-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-761.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-528.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-854.8KB/s(Youtube:不良林)
-      - 未知国家-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-761.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-528.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-854.8KB/s(Youtube:不良林)
-      - 未知国家-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-761.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-528.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-636.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-419.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
-      - 🇫🇷 法国-854.8KB/s(Youtube:不良林)
-      - 未知国家-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-839.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-890.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-927.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-385.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-939.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-761.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-528.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
